[package]
name = "skip-if"
description.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
members = [ "proc_macros" ]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Attribute macro to skip running a function that produces files"
categories = ["caching"]
repository = "https://github.com/cpg314/skip-if"

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
skip-if-macros = { path = "proc_macros", version = "0.1.1" }
